Fri Jan 21 16:29:28 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch] docs/Changes-1.4.txt: Make the @detail argument
	for the GtkStyleClass vtable const.

	* gtk/gtkitemfactory.[ch] docs/Changes-1.4.txt: Make GtkPrintFunc
	take a const string argument like GtkTranslateFunc. This will
	require changes in use code.

2000-01-19  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkwindow-win32.c (gdk_window_clear_area): The correct
	semantics (to mimic the X11 backend, which just calls XClearArea)
	is to check for zero width (and height), and in that case use the
	window's width minus x (height minus y). This fixes for instance
	some redraw problems with gtkclist, which were easily noticeable
	in the gtk file selection widget.

	(gdk_window_new): Don't set WS_EX_TOPMOST for dialog
	windows.

2000-01-13  Tor Lillqvist  <tml@iki.fi>

	* configure.in
	* gdk/Makefile.am
	* gdk/x11/Makefile.am
	* gdk/win32/Makefile.am: Small fixes, thanks to Peter Wainwright
	(bug #5177).
	* gdk/win32/gdkcc-win32.c: Reintroduce, to be thrown
	out later.

2000-01-09  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Ignore
	WM_MOVE for iconified or invisible windows. This fixes various
	problems when minimising windows. Thanks to Bernd Herd.

2000-01-05  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdkdraw.c (gdk_draw_lines): Fix copy&paste error: Call the
	backend's draw_lines method, not draw_points.

2000-01-02  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c: Clean up some more leftovers from
	before Owen's reorganisation: Don't have queued_events and
	queued_tail statics in this file, but use gdk_queued_events and
	gdk_queued_tail. This makes exposure event compression work again.

	(gdk_WindowProc): Comment out a posting of gdk_ping_msg, doesn't
	seem to be needed?

1999-12-30  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdk.c: If we don't HAVE_XCONVERTCASE we must #include
	gdkkeysyms.h to get the GDK_* keysym constants that are needed by